API: Publicada API atualizada
