# senai_sprint2_api/api_EventPlusBase/webapi.event+/Repositories/ComentariosEventoRepository.cs
@@ -174,5 +174,10 @@ namespace webapi.event_.Repositories
                 throw;
             }
         }
+
+        //public List<ComentariosEvento> Listar()
+        //{
+        //    throw new NotImplementedException();
+        //}
     }
 }
